[gd_scene load_steps=9 format=2]

[ext_resource path="res://graphics/Map.png" type="Texture" id=1]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=2]
[ext_resource path="res://src/Map.gd" type="Script" id=3]
[ext_resource path="res://control_theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/GidoleFont/Gidole-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 19
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://font/GidoleFont/Gidole-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 46
outline_size = 1
use_filter = true
font_data = SubResource( 3 )

[node name="Map" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1107.0
margin_top = -721.0
margin_right = 84.0
margin_bottom = 121.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapOpen" type="Sprite" parent="."]
position = Vector2( 593.74, 421 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="MapOpen"]

[node name="ColorRect" type="ColorRect" parent="MapOpen/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="MapOpen/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Node2D" parent="MapOpen"]

[node name="RoomSelect_TH_AULA" type="TouchScreenButton" parent="MapOpen/Sprite"]
position = Vector2( -355.575, -236.498 )
scale = Vector2( 0.514552, 0.315174 )
normal = ExtResource( 2 )

[node name="RoomSelect_TH_CLASS" type="TouchScreenButton" parent="MapOpen/Sprite"]
position = Vector2( -334.018, -365.129 )
scale = Vector2( 0.611423, 0.205848 )
normal = ExtResource( 2 )

[node name="RoomSelect_TH_NAWI" type="TouchScreenButton" parent="MapOpen/Sprite"]
position = Vector2( -86.428, 158.675 )
scale = Vector2( 0.157205, 0.21501 )
normal = ExtResource( 2 )

[node name="RoomSelect_TH_ADMIN" type="TouchScreenButton" parent="MapOpen/Sprite"]
position = Vector2( -452.909, 210.772 )
scale = Vector2( 0.188404, 0.126653 )
normal = ExtResource( 2 )

[node name="RoomSelect_TH_GYM" type="TouchScreenButton" parent="MapOpen/Sprite"]
position = Vector2( 366.167, -317.033 )
scale = Vector2( 0.272696, 0.657367 )
normal = ExtResource( 2 )

[node name="RoomSelect_LB_MZW" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_LB_COM-LAB" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_LB_LAB" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_ME" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_WI" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_FS" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_MB" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_GT" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="RoomSelect_WS_WM" type="TouchScreenButton" parent="MapOpen/Sprite"]

[node name="TextEdit" type="LineEdit" parent="MapOpen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -926.0
margin_top = -550.0
margin_right = -850.0
margin_bottom = -527.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 5
placeholder_text = "00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MapOpen"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -903.916
margin_top = -580.74
margin_right = -675.916
margin_bottom = -527.74
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "Enter Code:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeOKButton" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -171.0
margin_top = -130.0
margin_right = -83.0
margin_bottom = -84.0
color = Color( 0.709804, 0.709804, 0.709804, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CodeOKButton"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 44.0
margin_bottom = 23.0
rect_scale = Vector2( 2, 2 )
text = "OK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="CodeOKButton"]
scale = Vector2( 0.112753, 0.0766881 )
normal = ExtResource( 2 )
[connection signal="released" from="MapOpen/Sprite/RoomSelect_TH_AULA" to="." method="_on_RoomSelect_TH_AULA_released"]
[connection signal="released" from="MapOpen/Sprite/RoomSelect_TH_CLASS" to="." method="_on_RoomSelect_TH_CLASS_released"]
[connection signal="released" from="MapOpen/Sprite/RoomSelect_TH_NAWI" to="." method="_on_RoomSelect_TH_NAWI_released"]
[connection signal="released" from="MapOpen/Sprite/RoomSelect_TH_ADMIN" to="." method="_on_RoomSelect_TH_ADMIN_released"]
[connection signal="released" from="MapOpen/Sprite/RoomSelect_TH_GYM" to="." method="_on_RoomSelect_TH_GYM_released"]
[connection signal="released" from="CodeOKButton/TouchScreenButton" to="." method="_on_CodeOK_released"]
